2014-08-29  David Gilbert  <david.gilbert@object-refinery.com>

    (Patch from Simon Legner attached to bug 1129)
    * org/jfree/chart/ChartPanel.java
    (actionPerformed): Localise error messages,
    (saveAsSVG): Likewise,
    (saveAsPDF): Likewise.

2014-08-24  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/BarRenderer3D.java
    (drawItem): Add element hinting,
    * org/jfree/chart/renderer/IntervalBarRenderer.java
    (drawInterval): Add element hinting,
    * org/jfree/chart/renderer/LayeredBarRenderer.java
    (drawHorizontalItem): Add element hinting,
    (drawVerticalItem): Likewise,
    * org/jfree/chart/renderer/LevelRenderer.java
    (drawItem): Add element hinting.

2014-08-24  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/AbstractRenderer.java
    (beginElementGroup): New method,
    (endElementGroup): Likewise,
    * org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (beginElementGroup): Call superclass,
    (endElementGroup): Moved to superclass,
    * org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (beginElementGroup): New method,
    * org/jfree/chart/renderer/xy/XYBarRenderer.java
    (drawItem): Add element hinting,
    * org/jfree/data/KeyedValuesItemKey.java: New file,
    * org/jfree/data/xy/XYItemKey.java: New file.

2014-08-22  David Gilbert  <david.gilbert@object-refinery.com>

    Change suggested by Ulrich Voigt:
    * org/jfree/data/time/FixedMillisecond.java
    (FixedMillisecond()): Avoid Date creation,
    (FixedMillisecond(long)): Likewise,
    (FixedMillisecond(Date)): Redirect to other constructor.

2014-08-04  David Gilbert  <david.gilbert@object-refinery.com>

    Patch #312 by Ulrich Voigt:
    * org/jfree/chart/renderer/xy/XYAreaRenderer.java
    (drawItem): Restrict entity hotspot to within the plot area,
    * org/jfree/chart/renderer/xy/XYAreaRenderer2.java